tests/machine/x/ocaml/sort_stable.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/sort_stable.ml", line 25, characters 4-9:
25 |   ) items;
         ^^^^^
Error: This expression has type record1 list
       but an expression was expected of type (string * Obj.t) list list
       Type record1 is not compatible with type (string * Obj.t) list 


Context (around line 25):
  23 |   List.iter (fun i ->
  24 |       __res0 := Obj.obj (List.assoc "v" i) :: !__res0;
  25 |   ) items;
  26 | List.rev !__res0)
  27 | 
